--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
         <junit5.version>5.7.0</junit5.version>
         <guava.version>31.1-jre</guava.version>
         <selenium.version>4.8.3</selenium.version>
+        <jdom.version>2.0.6.1</jdom.version>
         <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
         <webdrivermanager.version>5.3.2</webdrivermanager.version>
         <surefire-provider.version>1.3.2</surefire-provider.version>
-        <allure-environment-writer.version>1.0.0</allure-environment-writer.version>
     </properties>
 
     <dependencies>
@@ -58,14 +58,14 @@
             <version>${allure.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.automatedowl</groupId>
-            <artifactId>allure-environment-writer</artifactId>
-            <version>${allure-environment-writer.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom2</artifactId>
+            <version>${jdom.version}</version>
         </dependency>
     </dependencies>
 
@@ -111,6 +111,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
+                <configuration>
+                    <source>9</source>
+                    <target>9</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
