Added minor changes to README.md, fixed var configuration

--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,10 @@
                         <junit.jupiter.execution.parallel.config.strategy>dynamic
                         </junit.jupiter.execution.parallel.config.strategy>
                     </systemPropertyVariables>
+                    <environmentVariables>
+                        <forkMode>always</forkMode>
+                        <browser>edge</browser>
+                    </environmentVariables>
                 </configuration>
                 <dependencies>
                     <dependency>
